update the header title for contact-us.html file

--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
     <div class="body">
         <header id="mainHeader"></header>
         <div class="contact-us-container">
-            <h1>Hello</h1>
+            <h1>Hello Anas</h1>
         </div>
     </div>
     <script src="/functions.js"></script>
